# Claims

./: Client.cpp  Config.cpp  Config.h  Environment.cpp  Environment.h  Makefile.am  Server.cpp  configure.ac  exp_con  txn_client_test.cpp  txn_server_test.cpp
BlockStreamIterator/: BlockStreamPerformanceMonitorTop.cpp  BlockStreamPerformanceMonitorTop.h  BlockStreamPerformanceTest.cpp  BlockStreamPerformanceTest.h  BlockStreamResultCollector.cpp
BlockStreamIterator/ParallelBlockStreamIterator/: BlockStreamExpander.cpp  BlockStreamExpander.h  BlockStreamJoinIterator.cpp  DataImportReader.cpp  DataImportReader.h  DataImportWriter.cpp  DataImportWriter.h  ExpandableBlockStreamBuffer.cpp  ExpandableBlockStreamExchangeEpoll.cpp  ExpandableBlockStreamExchangeLowerEfficient.cpp  ExpandableBlockStreamExchangeLowerMaterialized.cpp  ExpandableBlockStreamFilter.cpp  ExpandableBlockStreamFilter.h  ExpandableBlockStreamProjectionScan.cpp
Catalog/: Makefile.am  Partitioner.h
Catalog/Test/: Makefile.am
Client/: ClaimsServer.cpp
Client/Test/: Makefile.am
Daemon/: Daemon.cpp  Makefile.am
Executor/: AdaptiveEndPoint.cpp  Coordinator.cpp  ExpanderTracker.cpp  IteratorExecutorSlave.cpp  Makefile.am
Executor/Test/: Makefile.am
IndexManager/: CSBIndexBuilding.cpp  CSBIndexBuilding.h  CSBPlusTree.cpp  CSBPlusTree.h  CSBTree.cpp  CSBTree.h  EnhancedCSBTree.cpp  EnhancedCSBTree.h  IndexManager.cpp  IndexManager.h  IndexScanIterator.cpp  IndexScanIterator.h  LogicalCSBIndexBuilding.cpp  LogicalCSBIndexBuilding.h  LogicalIndexScan.cpp  LogicalIndexScan.h  Makefile.am  indexStructures.cpp  indexStructures.h
IndexManager/Test/: Makefile.am  test_csb_classes.cpp  test_csb_index.cpp  test_index_scan_iterator.cpp
Loader/: Hdfsloader.cpp  Hdfsloader.h
Parsetree/: ExecuteLogicalQueryPlan.cpp  Makefile.am  function.cpp  sql_node_struct.h
Resource/: Makefile.am  NodeTracker.cpp  NodeTracker.h  ResourceManagerMaster.cpp  ResourceManagerSlave.cpp
Test/: Makefile.am  TestMain.cpp  gtest_main.cpp
Test/TestSuit/: Makefile.am  hash_table_test.h
Test/common/: Makefile.am  insert_optimized_hash_table_test.h
Test/iterator/: elastic_iterator_model_test.h
Test/utility/: Makefile.am
catalog/: Makefile.am  catalog.cpp  catalog.h  projection.cpp  projection_binding.cpp  table.cpp  table.h
catalog/Test/: Makefile.am
codegen/: ExpressionGenerator.cpp
common/: Logging.cpp  Makefile.am  error_define.h  error_no.cpp  hashtable.h
common/Block/: DynamicBlockBuffer.cpp
common/Expression/: Makefile.am
common/Schema/: Schema.cpp  Schema.h  SchemaFix.cpp  SchemaFix.h
common/Schema/Test/: Makefile.am
common/expression/: Makefile.am
common/file_handle/: hdfs_connector.h
common/serialization/: Makefile.am
common/types/: decimal.cpp
conf/: config
loader/: AMQ_consumer.cpp  AMQ_consumer.h  Makefile.am  data_ingestion.cpp  data_ingestion.h  load_packet.cpp  load_packet.h  loader_message.h  master_loader.cpp  master_loader.h  single_file_connector.cpp  slave_loader.cpp  slave_loader.h  table_file_connector.cpp  validity.cpp  validity.h
loader/test/: Makefile.am  data_ingestion_test.cpp  data_ingestion_test.h
node_manager/: master_node.cpp  slave_node.cpp
physical_operator/: Makefile.am  physical_projection_scan.cpp  physical_txn_scan.cpp  physical_txn_scan.hpp
sql_parser/Test/: Makefile.am
sql_parser/ast_node/: Makefile.am
sql_parser/parser/: Makefile.am
stmt_handler/: delete_stmt_exec.cpp  drop_table_exec.cpp  insert_exec.cpp  load_exec.cpp  select_exec.cpp
storage/: BlockManager.cpp  BlockManager.h  ChunkStorage.cpp  ChunkStorage.h  Makefile.am  MemoryStore.cpp  MemoryStore.h  PartitionStorage.cpp  PartitionStorage.h
txn_manager/: Makefile.am  log_client.cpp  log_client.hpp  log_server.cpp  log_server.hpp  txn.cpp  txn.hpp  txn_client.cpp  txn_client.hpp  txn_client_test.cpp  txn_log.cpp  txn_log.hpp  txn_server.cpp  txn_server.hpp  txn_server_test.cpp
utility/: CpuScheduler.h  Makefile.am  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  Timer.h  resource_guard.h  stl_guard.h
